name:                ivory-px4-tests
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
copyright:           Galois, Inc. 2013
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     PX4.Tests.Platforms,
                       PX4.Tests.CopterMotors,
                       PX4.Tests.Ublox,
                       PX4.Tests.MPU6000,
                       PX4.Tests.MS5611,
                       PX4.Tests.HMC5883L,
                       PX4.Tests.AllSensors

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             copter-motor-test-gen
  main-is:             CopterMotorTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             ublox-gps-test-gen
  main-is:             UbloxGPSTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-mpu6k-test-gen
  main-is:             MPU6000Test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-ms5611-test-gen
  main-is:             MS5611Test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-hmc5883l-test-gen
  main-is:             HMC5883Test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-all-sensors-test-gen
  main-is:             AllSensorsTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-statemachine,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-hxstream,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

