name:                ivory-px4-tests
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
copyright:           Galois, Inc. 2013
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     PX4.Tests.Platforms,
                       PX4.Tests.CopterMotors,
                       PX4.Tests.Ublox,
                       PX4.Tests.MPU6000,
                       PX4.Tests.Baro,
                       PX4.Tests.Magnetometer,
                       PX4.Tests.PPMIn,
                       PX4.Tests.AllSensors,
                       PX4.Tests.Fragment,
                       PX4.Tests.SensorFusion

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       smaccm-datalink,
                       smaccm-fragment,
                       smaccm-ins,
                       smaccm-mavlink,
                       ivory-serialize,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             copter-motor-test-gen
  main-is:             CopterMotorTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             copter-motor-test-client
  main-is:             CopterMotorTestClient.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       bytestring,
                       haskeline,
                       pipes,
                       parsec,
                       transformers,
                       smaccm-commsec,
                       smaccm-datalink


executable             ublox-gps-test-gen
  main-is:             UbloxGPSTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-mpu6k-test-gen
  main-is:             MPU6000Test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-baro-test-gen
  main-is:             BaroTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-mag-test-gen
  main-is:             MagTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-ppm-in-test-gen
  main-is:             PPMInTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-all-sensors-test-gen
  main-is:             AllSensorsTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-datalink,
                       ivory-serialize,
                       ivory-px4-tests
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-fragment-test-gen
  main-is:             FragmentTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-tests,
                       ivory-px4-tests
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-sensor-fusion-test-gen
  main-is:             SensorFusionTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       ivory-px4-tests,
                       ivory-serialize,
                       smaccm-datalink,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-sensors-monitor-gen
  main-is:             SensorsMonitor.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-artifact,
                       ivory-backend-c,
                       smaccm-datalink,
                       ivory-px4-hw,
                       ivory-serialize,
                       ivory-stdlib

  default-language:    Haskell2010
  ghc-options:         -Wall

