
name:                smaccm-comm-client
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10


library
  exposed-modules:     SMACCMPilot.Comm.Native.Client,
                       SMACCMPilot.Comm.Native.Client.Opts
  build-depends:       base >= 4.6,
                       bytestring,
                       cereal,
                       pipes,
                       stm,
                       smaccm-commsec,
                       smaccm-datalink,
                       smaccm-comm-schema-native
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             smaccm-comm-client
  main-is:             CommClient.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       tower,
                       tower-config,
                       smaccm-datalink,
                       smaccm-comm-client

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             smaccm-comm-client-static-web
  main-is:             StaticWeb.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       snap-core,
                       snap-server

  default-language:    Haskell2010
  ghc-options:         -Wall

