
name:                smaccm-comm-server
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10


library
  exposed-modules:     SMACCMPilot.Comm.Ivory.Server,
                       SMACCMPilot.Comm.Ivory.Server.TestApp
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       tower,
                       ivory-bsp-stm32,
                       ivory-px4-hw,
                       smaccm-commsec,
                       smaccm-datalink,
                       smaccm-comm-schema-ivory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             smaccm-comm-server-test-gen
  main-is:             ServerTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       tower >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw,
                       smaccm-comm-server
  default-language:    Haskell2010
  ghc-options:         -Wall
