
name:                smaccm-commsec
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

data-files: support/aes.h,
            support/aescrypt.c,
            support/aeskey.c,
            support/aestab.c,
            support/aestab.h,
            support/aesopt.h,
            support/brg_endian.h,
            support/brg_types.h,
            support/commsec.c,
            support/commsec.h,
            support/gcm.c,
            support/gcm.h,
            support/gf128mul.c,
            support/gf128mul.h,
            support/gf_convert.c,
            support/gf_mul_lo.h,
            support/mode_hdr.h

library
  exposed-modules:     SMACCMPilot.Commsec.Ivory,
                       SMACCMPilot.Commsec.Ivory.Artifacts,
                       SMACCMPilot.Commsec.Ivory.Import,
                       SMACCMPilot.Commsec.Ivory.Import.Types,
                       SMACCMPilot.Commsec.Ivory.Error,
                       SMACCMPilot.Commsec.Ivory.Module,
                       SMACCMPilot.Commsec.Tower,
                       SMACCMPilot.Commsec.Keys,
                       SMACCMPilot.Commsec.Native,
                       SMACCMPilot.Commsec.Native.Error,
                       SMACCMPilot.Commsec.Native.Encode,
                       SMACCMPilot.Commsec.Native.Decode,
                       SMACCMPilot.Commsec.Sizes,
                       Paths_smaccm_commsec
  build-depends:       base >= 4.6,
                       bytestring,
                       cereal,
                       cipher-aes,
                       crypto-cipher-types,
                       containers,
                       ivory,
                       ivory-serialize,
                       ivory-stdlib,
                       ivory-artifact,
                       tower,
                       tower-config
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable smaccm-commsec-ivory-test-gen
  main-is:             IvoryTest.hs
  hs-source-dirs:      test
  build-depends:       base,
                       ivory,
                       ivory-stdlib,
                       ivory-artifact,
                       ivory-backend-c,
                       smaccm-commsec,
                       bytestring
  ghc-options:         -Wall

executable smaccm-commsec-native-test
  main-is:             NativeTest.hs
  hs-source-dirs:      test
  build-depends:       base,
                       bytestring,
                       ivory,
                       ivory-stdlib,
                       ivory-artifact,
                       ivory-backend-c,
                       smaccm-commsec
  ghc-options:         -Wall
