
name:                smaccm-datalink
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10


library
  exposed-modules:     SMACCMPilot.Datalink.HXStream.Ivory,
                       SMACCMPilot.Datalink.HXStream.Ivory.Types,
                       SMACCMPilot.Datalink.HXStream.Native,
                       SMACCMPilot.Datalink.HXStream.Tower,
                       SMACCMPilot.Datalink.Client,
                       SMACCMPilot.Datalink.Client.Async,
                       SMACCMPilot.Datalink.Client.ByteString,
                       SMACCMPilot.Datalink.Client.Opts,
                       SMACCMPilot.Datalink.Client.Console,
                       SMACCMPilot.Datalink.Client.Monad,
                       SMACCMPilot.Datalink.Client.Queue,
                       SMACCMPilot.Datalink.Client.Serial
  build-depends:       base >= 4.6,
                       async,
                       bytestring,
                       cereal,
                       cipher-aes,
                       crypto-cipher-types,
                       containers,
                       dlist,
                       haskeline,
                       monadLib,
                       pipes,
                       process,
                       serial,
                       stm,
                       transformers,
                       unix,
                       ivory,
                       ivory-hw,
                       ivory-serialize,
                       ivory-stdlib,
                       ivory-artifact,
                       tower-config,
                       tower,
                       smaccm-commsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable smaccm-datalink-ivory-frameloopback-test-gen
  main-is:             IvoryFrameLoopback.hs
  hs-source-dirs:      test
  build-depends:       base,
                       ivory,
                       ivory-stdlib,
                       ivory-artifact,
                       ivory-backend-c,
                       tower,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       smaccm-commsec,
                       smaccm-datalink
  ghc-options:         -Wall

executable smaccm-datalink-native-serial-test

  main-is:              NativeSerial.hs
  hs-source-dirs:       test

  build-depends:        base >= 4.6,
                        bytestring,
                        serialport,
                        dlist,
                        smaccm-datalink
  default-language:     Haskell2010


executable smaccm-datalink-client

  main-is:              Client.hs
  hs-source-dirs:       test

  build-depends:        base >= 4.6,
                        smaccm-datalink
  default-language:     Haskell2010

